--- a/Readme.org
+++ b/Readme.org
@@ -1,5 +1,10 @@
 #+TITLE: 七元真人說神真靈符經 / CK-KZ
 
 #+DATE: 2015-08-29 03:00:28.873684
-* 目次
+* 版本
+ |     CK-KZ|【重刊道藏輯要】|
+ |       HFL|【正統道藏・涵芬樓版】|
+ |      YP-C|【原版道藏輯要】|
+ |      ZTDZ|【正統道藏・三家本】|
+目次
  - [[file:KR5g0229_000.txt][七元真人說神真靈符經 0]]
